Use correct length for hdmi_infoframe_header_pack in <linux/hdmi.h>.

Fixes PR kern/49411.